--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
             "email": "tonglinyy@gmail.com"
         }
     ],
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "DirShow\\":"src"
